# Swiggy_delivery_time_prediction

./: Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: Exp1-KeepVsDropMissingValues.ipynb  Exp2-KeepVsDropMissingValues.ipynb  data_clean_utils.py  swiggybaselinemodel.ipynb  swiggyreg.ipynb
swiggy_delivery_time_prediction/: __init__.py  dataset.py  features.py  plots.py
swiggy_delivery_time_prediction/modeling/: predict.py  train.py
