[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "swiggy_delivery_time_prediction"
version = "0.0.1"
description = "Build ML project that predicts food delivery time"
authors = [
  { name = "RAHUL" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["swiggy_delivery_time_prediction"]
include = ["pyproject.toml", "swiggy_delivery_time_prediction/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["swiggy_delivery_time_prediction"]
force-sort-within-sections = true

